* Fixed tax boxes cannot be all unset (Chris T, 818)
* Project, serial number, and notes now appear initially (Chris T, 824)
* Fixed double-counting first date's balance on gl report (Chris T)
* Fixed user creation failing on some timezones with some datestyles (Chris T)
* Added secondary partnumber ordering to eca history report (Chris T)

Changelog for 1.3.32
* Fixed em-dash handling for pdfs (Chris T)
* Fixed multiple blank line handling for pdfs (Chris T)
* Fixed multiple repeat entries in chart of accounts drop down (Nick P, 812)
* Fixed transaction list empty if searched by creditor name (Nick P, 806)
* Fixed cash transfer enforces ticked 'FX' boxes (Nick P, 802)
* Fixed extra newline-related errors in tex template engine (Chris T)
* Reopen books now works again (Chris T, 792)
* Added address line to ar/ap transaction and invoice screens (Chris T)
* Fixed draft review issues for Cash Transfer GL drafts (Chris T, 802)
* Added fx boxes for GL transactions (Chris T, required to fix 802)
* Fixed odd UI issues with voiding GL transactions (Chris T, 803)
* Fixed department dropdown not showing values (Chris T, 805)
* Fixed error causing Reconciliation.sql not to be loaded/reloaded (Chris T)
* Added updated Hungarian charts of accounts (Pongracz Istvan, 813)


Nick P is Nick Prater

Changelog for 1.3.31
* Removed spurious commit saving orders (Chris T)
* Removed check for reversing too many sales, since this poses problems 
  in corner cases with no good solutions (Chris T)
* R5680-1, (tentatively) fixes to shipping/invoice onhand numbers (Chris T)
* Fixed customer search showing sales rather than billing addresses (Chris T)
* Fixed parts descriptions not showing on inventory actibity report (Chris T)
* Fixed encoding issues when printing from the queue (Chris T, 3602073)
* Fixed spurious commit in Invoice Shipped (Chris T)
* Fixed handling of long notes/descriptions on GL (Chris T, 3603939)