@@ -432,7 +432,7 @@ function on_return_submit(event){
     $form->hide_form(
         qw(id title vc type terms creditlimit creditremaining closedto locked 
            shipped oldtransdate recurring reverse batch_id subtype form_id
-           nextsub)
+           nextsub default_reportable)
     );
 
     print qq|
